--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "version": "1.0.0",
     "require": {
-        "php": "^5.6"
+        "php": ">=5.6"
     },
     "license": "Commercial License",
     "authors": [
