composer.json autoload settings added

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
             "email": "george.benjamin@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "NETopes\\Libraries\\Helpers\\": ""
+        }
+    }
 }
